css add in saved page

--- a/besbuy HTML/home.html
+++ b/besbuy HTML/home.html
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/322b14b2ff.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/bestbuy/bestbuy css/navbar.css">
     <link rel="stylesheet" href="/bestbuy/bestbuy css/home.css">
+    <link rel="stylesheet" href="/bestbuy/bestbuy css/profile.css">
    
 </style>
 </head>
@@ -54,7 +55,7 @@
     <!-- for slide view visit here -- https://www.w3schools.com/howto/howto_js_slideshow.asp  -->
     <!-- keep webpage responsive   -->
 
-    <footer>
+    <!-- <footer> 
         <div class="box-1">
             <div>
                 <p><i class="fa-regular fa-circle-question"></i></p><br>
@@ -168,6 +169,136 @@
                 <p>In-store pricing may vary. Prices and offers are subject to change. © 2022 Best Buy. All rights reserved. BEST BUY, the BEST BUY logo, the tag design, and MY BEST BUY are trademarks of Best Buy and its affiliated companies.</p>
             </div>
         </div>
-    </footer>
+    </footer>  -->
+    <div id="upperFoot">
+        <ol>
+              <li>
+                    <p>
+                          <b> 250 points = $5 reward certificate.</b> Reward certificates
+                          are coupons for discounts off future purchases. See My Best Buy
+                          program terms for details.
+                    </p>
+              </li>
+              <li>
+                    Get 2.5 points per $1 spent (5% back in rewards) on qualifying Best Buy® purchases when you
+                    choose Standard Credit with your Best Buy Credit Card. If you apply and are approved for a new
+                    My Best Buy® Credit Card, your first day of purchases on the Credit Card using Standard Credit
+                    within the first 14 days of account opening will get an additional 2.5 bonus points (an
+                    additional 5% back in rewards, for a total of 10%). Points are not awarded on promotional credit
+                    purchases. May not be combined with other My Best Buy offers. Does not include tax. Additional
+                    limitations may apply. Subject to My Best Buy Program Terms. Subject to change without notice.
+              </li>
+        </ol>
+  </div>
+  <div id="delivery">
+        <div>
+              <i class="fa-regular fa-circle-question"></i>
+              <p><a href="">Visit our support system</a></p>
+        </div>
+        <div>
+              <i class="fa-brands fa-shopify"></i>
+              <p><a href="">Check your order Status</a></p>
+        </div>
+        <div>
+              <img src="/bestbuy/img/truck-fast-solid.svg" alt="">
+              <p><a href="">Shipping Delivery and store pickup</a></p>
+        </div>
+        <div>
+              <img src="/bestbuy/img/retweet-solid.svg" alt="">
+              <p><a href="">Returns and Exchanges</a></p>
+        </div>
+
+  </div>
+  <hr>
+  <div id="footer">
+        <div class="feet">
+              <h4>Order & Purchases</h4>
+              <a href=""> Check Order Status </a><br>
+              <a href=""> Shipping, Delivery & Pickup </a><br>
+              <a href=""> Returns & Exchanges </a><br>
+              <a href=""> Price Match Guarantee </a><br>
+              <a href=""> Product Recalls </a><br>
+              <a href=""> Trade-In Program </a><br>
+              <a href=""> Gift Cards </a>
+              <h4> Payment Options </h4>
+              <a href=""> My Best Buy® Credit Card </a><br>
+              <a href=""> Pay Your Bill at Citibank</a><br>
+              <a href=""> Lease to Own</a>
+        </div>
+        <div class="feet">
+              <h4>Support & Services</h4>
+              <a href="">Visit our Support Center</a><br>
+              <a href="">Shop with an Expert</a><br>
+              <a href="">Schedule a Service</a><br>
+              <a href="">Manage an Appointment</a><br>
+              <a href="">Protection & Support Plans</a><br>
+              <a href="">Haul Away & Recycling</a><br>
+              <a href="">Contact Us</a>
+              <h4> Rewards & Membership </h4>
+              <a href="">Best Buy Totaltech </a><br>
+              <a href=""> My Best Buy</a><br>
+              <a href=""> View Points & Certificates</a><br>
+              <a href=""> Member Offers</a>
+        </div>
+        <div class="feet">
+              <h4>Partnerships</h4>
+
+              <a href=""> Affiliate Program </a><br>
+              <a href=""> Advertise with Us </a><br>
+              <a href=""> Developers </a><br>
+              <a href=""> Best Buy Health </a><br>
+              <a href=""> Best Buy Education </a><br>
+              <a href=""> Best Buy Business </a><br>
+              <h4>About Best Buy</h4>
+              <a href=""> Corporate Information </a><br>
+              <a href=""> Careers </a><br>
+              <a href=""> Corporate Responsibility & Sustainability </a><br>
+              <a href=""> Discover & Learn </a><br>
+        </div>
+        <div style="background-color: white;padding: 0px 25px;">
+              <p><a style="color: #0046c3;" href="account.html">
+                          sign in or create account
+                    </a></p>
+              <h4>Get the latest deals and more.</h4>
+              <p>
+                    <input type="text" placeholder="Enter email addres"><button>sign up</button>
+              </p>
+              <hr>
+              <div style="display: flex; margin-top: 30px;">
+                    <div ><i style="font-size: 50px;" class="fa-brands fa-app-store-ios"></i></div>
+                    <div><span>Best Buy app</span><br>
+                          <a href="">Learn more ></a>
+                    </div>
+              </div>
+              <hr>
+              <div style="display: flex;justify-content: space-between;">
+                    <p class="social">
+                          <i class="fa-brands fa-facebook"></i>
+                    </p>
+                    <p class="social">
+                          <i class="fa-brands fa-twitter"></i>
+                    </p>
+                    <p v>
+                          <i class="fa-brands fa-instagram"></i>
+                    </p>
+                    <p class="social">
+                          <i class="fa-brands fa-pinterest"></i>
+                    </p>
+                    <p class="social">
+                          <i class="fa-brands fa-youtube"></i>
+                    </p>
+              </div>
+              <hr>
+              <a style="color: #0046c3;" href="">Forums, blogs & more</a>
+        </div>
+  </div>
+  <div id="lastBottom">
+<p>  How was your experience?  <a style="color: #0046c3;text-decoration: underline;" href=""> Give feedback about our website</a>
+  </p>
+  <p>
+        In-store pricing may vary. Prices and offers are subject to change. © 2022 Best Buy. All rights reserved. BEST BUY, the BEST BUY logo, the tag design,
+         and MY BEST BUY are trademarks of Best Buy and its affiliated companies.
+  </p>
+  </div>
 </body>
 </html>
