home page footer some change

--- a/besbuy HTML/home.html
+++ b/besbuy HTML/home.html
@@ -170,7 +170,7 @@
             </div>
         </div>
     </footer>  -->
-    <div id="upperFoot">
+    <!-- <div id="upperFoot">
         <ol>
               <li>
                     <p>
@@ -189,7 +189,7 @@
                     limitations may apply. Subject to My Best Buy Program Terms. Subject to change without notice.
               </li>
         </ol>
-  </div>
+  </div> -->
   <div id="delivery">
         <div>
               <i class="fa-regular fa-circle-question"></i>
