home page footer some change

--- a/besbuy HTML/home.html
+++ b/besbuy HTML/home.html
@@ -170,7 +170,12 @@
             </div>
         </div>
     </footer>  -->
-  <div id="delivery">
+  <div style="height: 100px;">
+<h2>
+    write your code here
+</h2>
+  </div>
+    <div id="delivery">
         <div>
               <i class="fa-regular fa-circle-question"></i>
               <p><a href="">Visit our support system</a></p>
