home page footer some change

--- a/besbuy HTML/home.html
+++ b/besbuy HTML/home.html
@@ -170,7 +170,7 @@
             </div>
         </div>
     </footer>  -->
-  <div style="height: 100px;">
+  <div style="height: 200px; background-color: white;">
 <h2>
     write your code here
 </h2>
