home page footer some change

--- a/besbuy HTML/home.html
+++ b/besbuy HTML/home.html
@@ -59,6 +59,8 @@
             write your code here
         </h2>
     </div>
+
+    <!-- Footer starting from here -->
     <!-- <footer> 
         <div class="box-1">
             <div>
@@ -174,8 +176,6 @@
             </div>
         </div>
     </footer>  -->
-  
- 
     <div id="delivery">
         <div>
               <i class="fa-regular fa-circle-question"></i>
