--- a/besbuy HTML/deal_of_the_day.html
+++ b/besbuy HTML/deal_of_the_day.html
@@ -131,7 +131,8 @@
 
          <div class="hr"></div>
 
-         <div id="slider-topdeals"></div>
+         <div id="slider-topdeals">
+         </div>
 
          <h2>Deals for you</h2>
          <div class="hr"></div>
