--- a/besbuy HTML/home.html
+++ b/besbuy HTML/home.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
     <script src="https://kit.fontawesome.com/322b14b2ff.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="bestbuy/bestbuy css/navbar.css">
-    <link rel="stylesheet" href="bestbuy/bestbuy css/home.css">
-    <script src="bestbuy/bestbuy js/home.js" defer></script>
+    <link rel="stylesheet" href="/bestbuy css/navbar.css">
+    <link rel="stylesheet" href="/bestbuy css/home.css">
+    <script src="/bestbuy js/home.js" defer></script>
 </head>
 <body>
     <header>
