--- a/besbuy HTML/home.html
+++ b/besbuy HTML/home.html
@@ -92,7 +92,7 @@
         </div>
         </div>
     </div>
-    
+    <!-- write from here  -->
     <footer>
         <div class="box-1">
             <div>
