--- a/besbuy HTML/deal_of_the_day.html
+++ b/besbuy HTML/deal_of_the_day.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://kit.fontawesome.com/322b14b2ff.js" crossorigin="anonymous"></script>
-    <script src="/bestbuy js/dealof_the_day.js" defer></script>
-    <link rel="stylesheet" href="/bestbuy css/navbar.css">
-    <link rel="stylesheet" href="/bestbuy css/deal.css">
+    <script src="/bestbuy/bestbuy js/dealof_the_day.js" defer></script>
+    <link rel="stylesheet" href="/bestbuy/bestbuy css/navbar.css">
+    <link rel="stylesheet" href="/bestbuy/bestbuy css/deal.css">
 </head>
 <body>
   <header>
@@ -49,11 +49,16 @@
     </div>
 </header>
          <div id="box1">
-           <div>
+           <div id="box1a">
             <img src="https://sm.pcmag.com/t/pcmag_in/news/t/the-best-a/the-best-amazon-prime-day-2021-laptop-deals_9nc6.1200.jpg"/>
             </div>
             <div>
             <button><h3>ASUS - Vivobook 17.3" Laptop - Intel Core 10th Gen i5 - 12GB Memory - 1TB HDD</h3></button>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
               <h5>Get it today nearby</h5>
               <p>Pickup: Order now for pickup on Sun, Apr 10 at Aiea Available today at a location 6 miles away</p>
               <p1><button>See all pickup locations</button></p1>
@@ -62,7 +67,7 @@
                   <h1>$479.99</h1>
                   Deal ends in 1:34:05
                   <b>Free item with purchase</b>
-                  <button><i style='font-size:24px' class='fas'>&#xf217;</i>Add to Cart</button>
+                  <div id="box2a"><button><i style='font-size:24px' class='fas'>&#xf217;</i>Add to Cart</button></div>
                </div>
         </div>
 
