--- a/besbuy HTML/cart.html
+++ b/besbuy HTML/cart.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://kit.fontawesome.com/322b14b2ff.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/bestbuy css/navbar.css">
-    <link rel="stylesheet" href="/bestbuy css/cart.css">
+    <link rel="stylesheet" href="/bestbuy/bestbuy css/navbar.css">
+    <link rel="stylesheet" href="/bestbuy/bestbuy css/cart.css">
 </head>
 <body>
     <header>
