--- a/besbuy HTML/shop.html
+++ b/besbuy HTML/shop.html
@@ -91,7 +91,7 @@
             <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6443/6443321_sd.jpg;maxHeight=140;maxWidth=140"/>
             <button><p>Apple</p></button>
           </div>
-          <div class="innerbox">
+          <!-- <div class="innerbox">
             <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6408/6408356_rd.jpg;maxHeight=140;maxWidth=140"/>
             <button><p>Headphones</p></button>
           </div>
@@ -202,7 +202,7 @@
             <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/TopDeals_Services-Icon-56408cba-e222-410f-9e7b-7d53dc23ca37.png;maxHeight=140;maxWidth=140"/>
             <button><p>Support & Services</p></button>
             <p></p>
-          </div>
+          </div> -->
     </div>
     </div>
    
