--- a/besbuy HTML/shop.html
+++ b/besbuy HTML/shop.html
@@ -8,37 +8,46 @@
     <script src="https://kit.fontawesome.com/322b14b2ff.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/bestbuy/bestbuy css/navbar.css">
     <link rel="stylesheet" href="/bestbuy/bestbuy css/shop.css">
+    <script src="/bestbuy/bestbuy js/home.js"></script>
 </head>
 <body>
-    <header>
-        <div id="nav1">
-            <img src="https://pisces.bbystatic.com/image2/BestBuy_US/Gallery/BestBuy_Logo_2020-190616.png;maxHeight=80;maxWidth=136"
-                      style="margin-left:-0px;"/>
-            <i class="fa-solid fa-bars"></i>
-            <form>
-                <input type="text" placeholder="Search">
-                <i class="fa-solid fa-magnifying-glass"></i>
-            </form>
-            <i class="fa-solid fa-map-location-dot"></i>
+  <header>
+    <div id="nav1">
+        <img src="https://pisces.bbystatic.com/image2/BestBuy_US/Gallery/BestBuy_Logo_2020-190616.png;maxHeight=80;maxWidth=136">
+        <div id="menu">
+        <i class="fa-solid fa-bars"></i>
+        <a href="Menu">Menu</a>
+        </div>
+        <form>
+            <input type="text" placeholder="Search">
+            <i class="fa-solid fa-magnifying-glass"></i>
+        </form>
+        <div id="location">
+        <i class="fa-solid fa-map-location-dot"></i>
+        <a href="">Aiea</a>
+        </div>
+        <div id="cart">
             <i class="fa-solid fa-cart-shopping"></i>
-        </div>
-        <div id="hr"></div>
-        <div id="nav2">
-            <div id="shop">
-                <P><a href="shop.html">Shop</a></P>
-                <P><a href="Deal of the Day.html">Deal of the Day</a></P>
-                <P><a href="tataltech-membership">Totaltech membership</a></P>
-                <P><a href="credit-card.html">Credit card</a></P>
-                <P><a href="gift-card.html">Gift card</a></P>
+            <a href="cart.html">Cart</a>
             </div>
-            <div id="order">
-                <p><a href="account.html">Account</a></p>
-                <p><a href="recentlyviewed.html">Recently Viewed</a></p>
-                <p><a href="order-status.html">Order Status</a></p>
-                <p><a href="saved-items.html">Saved Items</a></p>
-            </div>
+    </div>
+    <div class="hr"></div>
+    <div id="nav2">
+        <div id="shop">
+            <P><a href="shop.html">Top Deals</a></P>
+            <p><a href="deal_of_the_day.html">Deals of the day</a></p>
+            <P><a href="tataltech-membership">Totaltech membership</a></P>
+            <P><a href="credit-card.html">Credit card</a></P>
+            <P><a href="gift-card.html">Gift card</a></P>
         </div>
-    </header>
+        <div id="order">
+            <p><a href="account.html">Account</a></p>
+            <p><a href="recentlyviewed.html">Recently Viewed</a></p>
+            <p id="order" style="color: white;">Order Status</p>
+            <p id="saved" style="color: white;">Saved Items</p>
+        </div>
+    </div>
+</header>
     <img src="https://pisces.bbystatic.com/image2/BestBuy_US/Gallery/TopDeals_RGB_PM1_Short-v04-104198.jpg;maxHeight=350;maxWidth=1000"
                 style="height:300px;
                        width:100%;
