--- a/besbuy HTML/credit-card.html
+++ b/besbuy HTML/credit-card.html
@@ -8,10 +8,8 @@
     <script src="https://kit.fontawesome.com/322b14b2ff.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/bestbuy/bestbuy css/navbar.css">
     <link rel="stylesheet" href="/bestbuy/bestbuy css/credit-card.css">
-    <script
-    src="https://kit.fontawesome.com/24c494a6b6.js"
-    crossorigin="anonymous"
-  ></script>
+    <script src="https://kit.fontawesome.com/24c494a6b6.js" crossorigin="anonymous"></script>
+   <script src="/bestbuy/bestbuy js/home.js"></script>
    
 </head>
 <body>
@@ -40,15 +38,15 @@
             <div id="shop">
                 <P><a href="shop.html">Top Deals</a></P>
                 <p><a href="deal_of_the_day.html">Deals of the day</a></p>
-                <P><a href="tataltech-membership">Totaltech membership</a></P>
+                <P><a href="tataltech-membership.html">Totaltech membership</a></P>
                 <P><a href="credit-card.html">Credit card</a></P>
                 <P><a href="gift-card.html">Gift card</a></P>
             </div>
             <div id="order">
                 <p><a href="account.html">Account</a></p>
-                <p><a href="recentlyviewed.html">Recently Viewed</a></p>
-                <p><a href="order-status.html">Order Status</a></p>
-                <p><a href="saved-items.html">Saved Items</a></p>
+                <p style="color: white;">Recently Viewed</a></p>
+                <p id="order" style="color: white;">Order Status</p>
+                <p id="saved" style="color: white;">Saved Items</p>
             </div>
         </div>
     </header>
