--- a/besbuy HTML/home.html
+++ b/besbuy HTML/home.html
@@ -37,13 +37,13 @@
             <div id="shop">
                 <P><a href="shop.html">Top Deals</a></P>
                 <p><a href="deal_of_the_day.html">Deals of the day</a></p>
-                <P><a href="tataltech-membership">Totaltech membership</a></P>
+                <P><a href="tataltech-membership.html">Totaltech membership</a></P>
                 <P><a href="credit-card.html">Credit card</a></P>
                 <P><a href="gift-card.html">Gift card</a></P>
             </div>
             <div id="order">
                 <p><a href="account.html">Account</a></p>
-                <p><a href="recentlyviewed.html">Recently Viewed</a></p>
+                <p style="color: white;">Recently Viewed</a></p>
                 <p id="order" style="color: white;">Order Status</p>
                 <p id="saved" style="color: white;">Saved Items</p>
             </div>
