--- a/besbuy HTML/cart.html
+++ b/besbuy HTML/cart.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://kit.fontawesome.com/322b14b2ff.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/bestbuy/bestbuy css/navbar.css">
-    <link rel="stylesheet" href="/bestbuy/bestbuy css/cart.css">
-    <link rel="stylesheet" href="/bestbuy/bestbuy css/home.css">
-    <script src="/bestbuy/bestbuy js/home.js"></script>
+    <link rel="stylesheet" href="/bestbuy css/navbar.css">
+    <link rel="stylesheet" href="/bestbuy css/cart.css">
+    <!-- <link rel="stylesheet" href="/bestbuy css/home.css"> -->
+    <!-- <script src="/bestbuy js/home.js"></script> -->
 </head>
 <body>
     <header>
@@ -70,7 +70,7 @@
             <div id="form" style="width: 200px; height: 300px; display: grid;grid-template-columns: 200px;grid-template-rows: repeat(2,150px);justify-content: space-evenly;">
             </div>
                 <div>
-                    <select id="">
+                    <select>
                         <option value="1">1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
@@ -262,4 +262,4 @@
     </div>
 </body>
 </html>
-<script src="/bestbuy/bestbuy js/cart.js"></script>
+<script src="/bestbuy js/cart.js"></script>
