--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
-    <link rel="stylesheet" href="bestbuy/bestbuy css/launching.css">
-    <script src="bestbuy/bestbuy js/index.js" defer></script>
+    <link rel="stylesheet" href="/bestbuy/bestbuy css/launching.css">
+    <script src="/bestbuy/bestbuy js/index.js" defer></script>
     <title>Document</title>
-    <link rel="stylesheet" href="./bestbuy css/launching.css">
-    <script src="./bestbuy js/index.js" defer></script>
+    <link rel="stylesheet" href="/bestbuy/bestbuy css/launching.css">
+    <script src="/bestbuy/bestbuy js/index.js" defer></script>
 </head>
 <body>
         <div class="ms_main">
