--- a/besbuy HTML/cart.html
+++ b/besbuy HTML/cart.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://kit.fontawesome.com/322b14b2ff.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/bestbuy css/navbar.css">
-    <link rel="stylesheet" href="/bestbuy css/cart.css">
-    <!-- <link rel="stylesheet" href="/bestbuy css/home.css"> -->
-    <!-- <script src="/bestbuy js/home.js"></script> -->
+    <link rel="stylesheet" href="/bestbuy/bestbuy css/navbar.css">
+    <link rel="stylesheet" href="/bestbuy/bestbuy css/cart.css">
+    <script src="/bestbuy/bestbuy js/cart.js" defer></script>
+    <!-- <script src="/bestbuy/bestbuy js/home.js"></script> -->
 </head>
 <body>
     <header>
@@ -262,4 +262,3 @@
     </div>
 </body>
 </html>
-<script src="/bestbuy js/cart.js"></script>
