--- a/besbuy HTML/shop.html
+++ b/besbuy HTML/shop.html
@@ -13,7 +13,8 @@
 <body>
   <header>
     <div id="nav1">
-        <img src="https://pisces.bbystatic.com/image2/BestBuy_US/Gallery/BestBuy_Logo_2020-190616.png;maxHeight=80;maxWidth=136">
+        <img src="https://pisces.bbystatic.com/image2/BestBuy_US/Gallery/BestBuy_Logo_2020-190616.png;maxHeight=80;maxWidth=136"
+        style="margin-left:0px;">
         <div id="menu">
         <i class="fa-solid fa-bars"></i>
         <a href="Menu">Menu</a>
