--- a/besbuy HTML/deal_of_the_day.html
+++ b/besbuy HTML/deal_of_the_day.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://kit.fontawesome.com/322b14b2ff.js" crossorigin="anonymous"></script>
-    <script src="/bestbuy js/dealof_the_day.js" defer></script>
-    <link rel="stylesheet" href="/bestbuy css/navbar.css">
-    <link rel="stylesheet" href="/bestbuy css/deal.css">
-    <script src="/bestbuy js/home.js"></script>
+    <script src="/bestbuy/bestbuy js/dealof_the_day.js" defer></script>
+    <link rel="stylesheet" href="/bestbuy/bestbuy css/navbar.css">
+    <link rel="stylesheet" href="/bestbuy/bestbuy css/deal.css">
+    <script src="/bestbuy/bestbuy js/home.js"></script>
 </head>
 <body>
   <header>
@@ -37,7 +37,7 @@
         <div id="shop">
             <P><a href="shop.html">Top Deals</a></P>
             <p><a href="deal_of_the_day.html">Deals of the day</a></p>
-            <P><a href="tataltech-membership.html">Totaltech membership</a></P>
+            <P><a href="totaltech-membership.html">Totaltech membership</a></P>
             <P><a href="credit-card.html">Credit card</a></P>
             <P><a href="gift-card.html">Gift card</a></P>
         </div>
