--- a/besbuy HTML/totaltech-membership.html
+++ b/besbuy HTML/totaltech-membership.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://kit.fontawesome.com/322b14b2ff.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/bestbuy css/navbar.css">
-    <link rel="stylesheet" href="/bestbuy css/totaltech.css">
-    <link rel="stylesheet" href="/bestbuy css/navbar.css">
-    <script src="/bestbuy js/home.js"></script>
+    <link rel="stylesheet" href="/bestbuy/bestbuy css/navbar.css">
+    <link rel="stylesheet" href="/bestbuy/bestbuy css/totaltech.css">
+    <link rel="stylesheet" href="/bestbuy/bestbuy css/navbar.css">
+    <script src="/bestbuy/bestbuy js/home.js"></script>
 </head>
 
 <body>
