--- a/besbuy HTML/profile.html
+++ b/besbuy HTML/profile.html
@@ -23,7 +23,7 @@
       </div>
       <div id="navbar">
             <div id="menu">
-                  <img src="https://pisces.bbystatic.com/image2/BestBuy_US/Gallery/BestBuy_Logo_2020-190616.png;maxHeight=80;maxWidth=136"
+                  <img id="home" src="https://pisces.bbystatic.com/image2/BestBuy_US/Gallery/BestBuy_Logo_2020-190616.png;maxHeight=80;maxWidth=136"
                         alt="">
                   <p><i class="fa-solid fa-bars"></i> Menu</p>
             </div>
@@ -274,3 +274,11 @@
 </body>
 
 </html>
+<script>
+      var link=document.querySelector("#home");
+      link.addEventListener("click",homeFun);
+      function homeFun(){
+            window.open("home.html" ,"_self");
+                        return;
+      }
+</script>
