--- a/besbuy HTML/profile.html
+++ b/besbuy HTML/profile.html
@@ -276,6 +276,7 @@
 </html>
 <script>
       var link=document.querySelector("#home");
+      link.style.curser="pointer";
       link.addEventListener("click",homeFun);
       function homeFun(){
             window.open("home.html" ,"_self");
