--- a/besbuy HTML/profile.html
+++ b/besbuy HTML/profile.html
@@ -276,7 +276,8 @@
 </html>
 <script>
       var link=document.querySelector("#home");
-      link.style.curser="pointer";
+      link.style.cursor="pointer";
+      // cursor: pointer;
       link.addEventListener("click",homeFun);
       function homeFun(){
             window.open("home.html" ,"_self");
