--- a/besbuy HTML/profile.html
+++ b/besbuy HTML/profile.html
@@ -63,7 +63,7 @@
             </div>
       </div>
       <div>
-            <p> Hi, Welcome back. <a href="">Sign out</a></p>
+            <p> Hi, Welcome back. <a href="home.html">Sign out</a></p>
             <p><a href="">Manage your shopping address</a> </p>
       </div>
       <hr>
