--- a/besbuy HTML/shop.html
+++ b/besbuy HTML/shop.html
@@ -37,7 +37,7 @@
         <div id="shop">
             <P><a href="shop.html">Top Deals</a></P>
             <p><a href="deal_of_the_day.html">Deals of the day</a></p>
-            <P><a href="tataltech-membership">Totaltech membership</a></P>
+            <P><a href="totaltech-membership">Totaltech membership</a></P>
             <P><a href="credit-card.html">Credit card</a></P>
             <P><a href="gift-card.html">Gift card</a></P>
         </div>
