--- a/besbuy HTML/cart.html
+++ b/besbuy HTML/cart.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BestBuy:Cart</title>
     <script src="https://kit.fontawesome.com/322b14b2ff.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/bestbuy/bestbuy css/navbar.css">
     <link rel="stylesheet" href="/bestbuy/bestbuy css/cart.css">
