--- a/besbuy HTML/deal_of_the_day.html
+++ b/besbuy HTML/deal_of_the_day.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BestBuy: Deals Of the day</title>
     <script src="https://kit.fontawesome.com/322b14b2ff.js" crossorigin="anonymous"></script>
     <script src="/bestbuy/bestbuy js/dealof_the_day.js" defer></script>
     <link rel="stylesheet" href="/bestbuy/bestbuy css/navbar.css">
