--- a/besbuy HTML/home.html
+++ b/besbuy HTML/home.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/bestbuy/bestbuy css/navbar.css">
     <link rel="stylesheet" href="/bestbuy/bestbuy css/home.css">
     <link rel="stylesheet" href="/bestbuy/bestbuy css/homepage.css">
-    <script src="/bestbuy js/home.js" defer></script>
+    <script src="/bestbuy/bestbuy js/home.js" defer></script>
 </head>
 <body>
     <header>
